Fixed typos on HW1

--- a/mth505-hw1.tex
+++ b/mth505-hw1.tex
@@ -155,7 +155,7 @@ Completed in the following order: a, b, c, d, e, h, f, g.
 	$0*0=0$.
 	Suppose $x\in S$, then
 	\begin{align*}
-		0*\sigma(x) &= 0*n + 0	\tag{4} \\
+		0*\sigma(x) &= 0*x + 0	\tag{4} \\
 			&= 0 + 0			\tag{IH}\\
 			&= 0				\tag{1}
 	\end{align*}
@@ -205,7 +205,7 @@ Completed in the following order: a, b, c, d, e, h, f, g.
     	a+\sigma(x) &= b+\sigma(x)          \\
     	\sigma(a+x) &= \sigma(b+x) \tag{2}  \\
                 a+x &= b+x         \tag{P3} \\
-                  a &= x           \tag{IH}
+                  a &= b           \tag{IH}
   \end{align*}
   Hence $\sigma(x) \in S$, so $\bf{P4}$
   $\Rightarrow S = \mathbb{N}$.
