True fact: use \qed instead of \hfill$\square$

--- a/mth505-hw2.tex
+++ b/mth505-hw2.tex
@@ -54,7 +54,7 @@ Refer to the aforementioned set for future references to $R_{a,b,c}$.
 
       Thus, $R_{a,b,c}=R_{a',b',c'}$.
     }
-    \hfill $\square$
+    \qed
   \end{enumerate}
 
 \subsection{} % 2.2
@@ -74,7 +74,7 @@ Refer to the aforementioned set for future references to $R_{a,b,c}$.
   But $a$ and $b$ are coprime, so $u\equiv c\equiv\tilde{u}\pmod{b}$.
   Furthermore, $0\leq u,\tilde{u}<b$, so $u$ and $\tilde{u}$ inhabit the same
   residue class and are therefore equal.
-  \hfill $\square$
+  \qed
 
 \subsection{} % 2.3
   Let $a,b\in\N$ be coprime with $ab\ne0$. If $c=ab-a-b$, prove $R_{a,b,c}=
@@ -89,7 +89,7 @@ Refer to the aforementioned set for future references to $R_{a,b,c}$.
   corresponding $(u,v)$ satisfying the conditions laid out in \textbf{2.2}. But
   for all $(x,y)$ in $R_{a,b,c}$, $(u,v)$ existed and was unique! Hence,
   $R_{a,b,c}$ is empty.
-  \hfill $\square$
+  \qed
 
 \subsection{} % 2.4
   Let $a,b\in\N$ be coprime with $ab\ne0$. Prove every number $c>ab-a-b$ is
@@ -145,7 +145,7 @@ Refer to the aforementioned set for future references to $R_{a,b,c}$.
       Hence, $(x+x'-b)\in\N$ and $(x+x'-b,\,y+y'+a)$ is indeed a valid
       representation of $n+1$.
     }
-    \hfill $\square$
+    \qed
   \end{enumerate}
 
 \subsection{} % 2.5
@@ -163,7 +163,7 @@ Refer to the aforementioned set for future references to $R_{a,b,c}$.
                 = \floor*{\frac{c}{ab}(y'b+x'a)}
                 = \floor*{\frac{c}{ab}}
   \end{align*}
-  \hfill $\square$
+  \qed
 
 \subsection{} % 2.6
 
